--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+1.03    18 Aug 2014  Switch to using bsd_glob to handle spaces in paths
+                     on Windows.
+
 1.02    16 Aug 2014  Handle spaces in path names - thanks to oliwel for the
                      patch.
 
